<resources>
    <string name="app_name">Asecro Taxi</string>
    <string name="version_code">For User | Ver 0.1.2 Dev</string>
    <string name="date_format_UTC">yyyy-MM-dd</string>
    <string name="date_format_charge_customer">dd MMM yyyy</string>
    <string name="time_format_charge_customer">HH:mm</string>
    <string name="datetime_format_UTC">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_format">EEE, MMM d yyyy</string>
    <string name="trip_history_dateformat">d MMM</string>
    <string name="emailme">emailaddress@emailaddress.com</string>
    <string name="Subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="sharegoogleplus">com.google.android.apps.plus</string>
    <string name="sharetwitter">com.twitter.android</string>
    <string name="sharewhatsapp">com.whatsapp</string>
    <string name="sharefacebook">com.facebook.katana</string>
    <string name="textplain">text/plain</string>
    <string name="smsbody">sms_body</string>
    <string name="sms">emailaddress@emailaddress.com</string>
    <string name="httpmap">https://www.google.com/maps/place/</string>
    <string name="httptwitter">https://twitter.com/intent/tweet?text=</string>
    <string name="mailto">mailto:</string>
    <string name="share">Share</string>
    <string name="share_taxi_location">Share Taxi Location</string>
    <string name="address">Address</string>
    <string name="yourDesstination">Your Destination</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="Messaging">Messaging</string>
    <string name="facebook">Facebook</string>
    <string name="GooglePlus">Google Plus</string>
    <string name="Email">Email</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="send_new_password">Send New Password</string>
    <string name="Gmail">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="cancel_">cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="share_taxi_location_via">Share Taxi Location via...</string>
    <string name="welcome_people">Welcome People, Let&#xB4;s Get In The Ride</string>
    <string name="welcome_to_cabby">Welcome to Cabby!</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="sign_up_now">Sign-Up Now!</string>
    <string name="new_user">New User?</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="setting">Setting</string>
    <string name="just_a_moment_to_set_up_your_profile">Just a moment to set up your profile</string>
    <string name="your_account_has_been_activated">Your Account Has Been Activated</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pay_mode">Pay Mode</string>
    <string name="payment">Payment</string>
    <string name="payment_success">Payment Success</string>
    <string name="successfully">Successfully</string>
    <string name="can_not_delete_account_when_you_have_request_taxi">Can not delete account when you have request taxi</string>
    <string name="can_not_logout_account_when_you_have_request_taxi">Can not logout account when you have request taxi</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Success</string>
    <string name="creadit_card">Creadit Card</string>
    <string name="choose_card_type">Choose Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="cvv_code">CVV Code</string>
    <string name="enter_your_card_information">Enter Your Card Information</string>
    <string name="pay_by_creadit_card">Pay By Creadit Card</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="payment_by_cash">Payment by Cash</string>
    <string name="payment_by_creditcard">Payment by CreditCard</string>
    <string name="paid_by_cash">Paid by Cash</string>
    <string name="pay_by_card">Pay by Card</string>
    <string name="cash">Cash</string>
    <string name="i_agree_on">I Agree on</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="is_using_a_cab_using_Cabby">is using a cab using Cabby</string>
    <string name="done">Done</string>
    <string name="download_now">Download Now!</string>
    <string name="loading">Loading...</string>
    <string name="done_">Done!</string>
    <string name="login_error">Login Error</string>
    <string name="username_or_password_invalid">Username or password invalid</string>
    <string name="please_check_your_network">Please check your network</string>
    <string name="pick_up_time_in_past">Pickup time in past</string>
    <string name="please_recheck_your_username_or_password">Please recheck your username or passwork</string>
    <string name="my_profile">My Profile</string>
    <string name="price">Price</string>
    <string name="history">History</string>
    <string name="favourite_driver">Favourite Driver</string>
    <string name="driving_to_destination">Driving To Destination</string>
    <string name="receipt">Receipt</string>
    <string name="post">post</string>
    <string name="a_receipt_has_been_sent_to_you">A receipt has been sent to you.</string>
    <string name="best_experience_when_riding_with_cabby_app">Best experience when riding with Cabby App</string>
    <string name="user_id">User ID</string>
    <string name="credit_card_setting">Credit Card Setting</string>
    <string name="company_user">Company User</string>
    <string name="sns_setting">SNS Setting</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about_cabby">About Cabby</string>
    <string name="are_you_sure_delete_favourite_location">Are you sure?\nYou want to delete this favourite location?</string>
    <string name="term_of_use">Term Of Use</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="facebook_app_id">456856911170836</string>
    <string name="google_maps_key">AIzaSyBHwwl5e00zVcTFYkJZC4MRyxZ-TvI4Two</string>
    <string name="google_server_key">AIzaSyBuDTIzZl0srIUugguQOjVFxpmdd8gevtg</string>
    <string name="TWITTER_CONSUMER_KEY">0zyOtuQaehD0fJpyjKfNq1NHO</string>
    <string name="TWITTER_CONSUMER_SECRET">UuGe3bDLIDGqzUUrPM7ac7aiTBWp201jfI0AUXxQfu0ZvXYYQl</string>
    <string name="oauth_verifier">oauth_verifier</string>
    <string name="wrong_authtoken">Wrong authtoken, please login again !</string>
    <string name="denied">denied</string>
    <string name="permission_is_denied">Permission is Denied</string>
    <string name="public_cab_locations">Public Cab Locations</string>
    <string name="waiting_for_get_your_location">Waiting for get your location</string>
    <string name="requesting">Requesting...</string>
    <string name="request_taxi">Request Taxi</string>
    <string name="request_id_null">Request Taxi Null</string>
    <string name="cab_request">Cab Request</string>
    <string name="cancel">Cancel?</string>
    <string name="taxis_found">Taxis Found</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="wrong_code">Wrong Code</string>
    <string name="enter">Enter</string>
    <string name="find">Find!</string>
    <string name="from">From</string>
    <string name="friends">Friends</string>
    <string name="to">To</string>
    <string name="when">When?</string>
    <string name="here">Here</string>
    <string name="now">Now!</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="date">Date</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="close">Close</string>
    <string name="regular">Regular</string>
    <string name="mpv">MPV</string>
    <string name="luxury">Luxury</string>
    <string name="tuktuk">Tuk-tuk</string>
    <string name="km">Km</string>
    <string name="favourite_location">Favourite Location</string>
    <string name="history_location">History Location</string>
    <string name="nearby_location">Nearby Location</string>
    <string name="you_did_not_save_any_favourite_location">You did not save any favourite location</string>
    <string name="save">Save</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_charge">Taxi Charge</string>
    <string name="total_charge">Total Charge</string>
    <string name="arriving_in">Arriving in</string>
    <string name="mins">Mins</string>
    <string name="min">min</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="secs">Secs</string>
    <string name="title_activity_maps">Map</string>
    <string name="ok">Ok</string>
    <string name="add_as_favourite_driver">Add as Favourite Driver!</string>
    <string name="you_have_not_any_favourite_driver">You have not any Favourite Driver!</string>
    <string name="thank_you_for_talking_the_ride">Thank You for Talking the Ride.</string>
    <string name="spend_a_momment_to_rate_this_driver">Spend a Moment to Rate This Driver</string>
    <string name="rate_the_driver">Rate the Driver</string>
    <string name="get_in_the_ride">Get in The Ride!</string>
    <string name="driver">Driver</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="present_by_asecro">Present by ASECRO</string>
    <string name="incorrect_pin_code">Incorrect PIN Code</string>
    <string name="please_input_again">Please input again</string>
    <string name="please_input_from_address">Please input from address</string>
    <string name="please_input_from_location">Please input from location</string>
    <string name="please_input_to_address">Please input to address</string>
    <string name="please_input_to_location">Please input to location</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="please_input_your_company_name">Please input your company name</string>
    <string name="please_input_your_phone_number">Please input your phone number</string>
    <string name="please_input_your_email">Please input your email</string>
    <string name="please_input_your_usename">Please input your username</string>
    <string name="please_choose_your_country">Please choose your country</string>
    <string name="Email_wrong_format">Email wrong format</string>
    <string name="next">Next</string>
    <string name="amount_of_limit">Amount of Limit</string>
    <string name="monthly">Monthly</string>
    <string name="card_type">Card Type</string>
    <string name="car_holder_name">Card Holder Name</string>
    <string name="card_ex_date">Card Expiration Date</string>
    <string name="mm_yy">MM / YY</string>
    <string name="take_picture_on_camera">Take picture on camera</string>
    <string name="choose_picture_from_gallery">Choose picture from Gallery</string>
    <string name="for_personal">For Personal</string>
    <string name="for_company">For Company</string>
    <string name="rm">RM</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="back_to_login">Back to login</string>
    <string name="a_new_password_has_been_send_to_your_email_address">A new password has been send to your email address</string>
    <string name="one_day">1 day</string>
</resources>