<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_password_backgound"
    android:orientation="vertical"
    tools:context="bhtech.com.cabbytaxi.Login.ForgotPasswordController">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_23sdp"
                android:text="@string/forgot_your_password"
                android:textColor="#e6e1df"
                android:textSize="@dimen/_16sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp">

                <LinearLayout
                    android:id="@+id/layout_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/etForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_13sdp"
                        android:background="@drawable/rectangle_background_white_radius_100"
                        android:gravity="center"
                        android:hint="@string/enter_your_email_address"
                        android:textColorHint="#bababa"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/btnSendNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/forgot_password_button_send_background"
                        android:gravity="center"
                        android:text="@string/send_new_password"
                        android:textAllCaps="true"
                        android:textColorHint="#2d2d10"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:gravity="center_horizontal"
                        android:singleLine="false"
                        android:text="@string/a_new_password_has_been_send_to_your_email_address"
                        android:textColor="#bababa"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/tvBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_35sdp"
            android:background="@drawable/forgot_password_button_back"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="#c8c7c7"
                android:textSize="@dimen/_11sdp" />
        </FrameLayout>

    </FrameLayout>
</LinearLayout>
