<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bhtech.com.cabbytaxi.Register.Personal.CreditCardEditView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ebf2f2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/credit_card" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fcfcfc"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_of_limit"
                        android:textColor="@color/gray_text_car"
                        android:textSize="@dimen/_14sdp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp">

                        <EditText
                            android:id="@+id/etAmountLimit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rectangle_boder_black_radius_5"
                            android:hint="000.00"
                            android:inputType="numberDecimal"
                            android:paddingLeft="@dimen/_40sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="center_vertical"
                            android:text="@string/rm"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_18sdp" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rbOnce"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="@string/one_day"
                            android:textColor="@color/gray_text_car"
                            android:textSize="@dimen/_14sdp" />

                        <RadioButton
                            android:id="@+id/rbMonthly"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:text="@string/monthly"
                            android:textColor="@color/gray_text_car"
                            android:textSize="@dimen/_14sdp" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/card_type"
                    android:textColor="@color/gray_text_car"
                    android:textSize="@dimen/_14sdp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:background="@drawable/rectangle_border_orange_radius_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/icon_visa_endtaxi" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_28sdp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/icon_master_card" />
                        </FrameLayout>
                    </LinearLayout>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rbVisa"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/rbMasterCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1" />
                    </RadioGroup>

                    <View
                        android:layout_width="0.67dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/orangeLight" />
                </FrameLayout>

                <EditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="left"
                    android:hint="@string/card_number"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/etCardHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="left"
                    android:hint="@string/car_holder_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/etCVVCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="left"
                    android:hint="@string/cvv_code"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_ex_date"
                        android:textColor="@color/gray_text_car"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/etCardExDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/mm_yy"
                        android:inputType="date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/orange_button_background">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/back_arrow" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@color/brownLight" />
        </FrameLayout>

        <TextView
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/orange_button_background"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</FrameLayout>
